changes done and side bar icon chnage

--- a/ComplainReport-list.html
+++ b/ComplainReport-list.html
@@ -114,7 +114,7 @@
       <!-- Page Body Start-->
       <div class="page-body-wrapper">
         <!-- Page Sidebar Start-->
-        <div class="sidebar-wrapper" data-layout="stroke-svg">
+          <div class="sidebar-wrapper" data-layout="stroke-svg">
                <div class="logo-wrapper">
                   <a href="index.html"><img class="img-fluid w-75" src="assets/images/logo/logo-unique_it.webp" alt=""></a>
                   <div class="back-btn"><i class="fa fa-angle-left"> </i></div>
@@ -145,50 +145,65 @@
                         <span class="lan-2">Dasboard</span></a>
                      </li>
                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="Problem-list.html">
-                     <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Problem List</span></a>
+                     <a class="sidebar-link" href="AddService.html">
+                     <i class="fa fa-plus-circle text-white" aria-hidden="true"></i>
+                     <span class="lan-2">Complain Add</span></a>
                   </li>
-                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="ComplainRequest-list.html">
-                     <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Complain Request List</span></a>
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
+                     <a class="sidebar-link" href="Working-Service.html">
+                        <i class="fa fa-cogs text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Working Complaints</span>
+                     </a>
                   </li>
-                  <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
+                     <a class="sidebar-link" href="Completed-Service.html">
+                        <i class="fa fa-check-circle text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Completed Complaints</span>
+                     </a>
+                  </li>
+
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
+                     <a class="sidebar-link" href="Plumberlist.html">
+                        <i class="fa fa-user text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Plumber List</span>
+                     </a>
+                  </li>
+
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
+                     <a class="sidebar-link" href="Plumberreport.html">
+                        <i class="fa fa-file-text text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Plumber Report</span>
+                     </a>
+                  </li>
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
                      <a class="sidebar-link" href="ComplainReport-list.html">
-                     <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Complain Report</span></a>
+                        <i class="fa fa-file-text text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Complaint Report</span>
+                     </a>
                   </li>
-                  <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="ComplainStatus.html">
-                     <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Complain Status</span></a>
+
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
+                     <a class="sidebar-link" href="Problem-list.html">
+                        <i class="fa fa-exclamation-triangle text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Problem List</span>
+                     </a>
                   </li>
-                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                        <a class="sidebar-link" href="Working-Service.html">
-                        <i class="fa fa-home text-white" aria-hidden="true"></i>
-                        <span class="lan-2">Working Complain </span></a>
-                     </li>
-                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                        <a class="sidebar-link" href="Completed-Service.html">
-                        <i class="fa fa-home text-white" aria-hidden="true"></i>
-                        <span class="lan-2">Completed Complain </span></a>
-                     </li>
-                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                        <a class="sidebar-link" href="Plumberlist.html">
-                        <i class="fa fa-home text-white" aria-hidden="true"></i>
-                        <span class="lan-2">Plumber</span></a>
-                     </li>
-                      <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="Plumberreport.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Plumber Report</span></a>
-                </li> 
-                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                        <a class="sidebar-link" href="Payment.html">
-                        <i class="fa fa-home text-white" aria-hidden="true"></i>
-                        <span class="lan-2">Payment</span></a>
-                     </li>
+
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
+                     <a class="sidebar-link" href="Payment.html">
+                        <i class="fa fa-credit-card text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Payment</span>
+                     </a>
+                  </li>
+
                      <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
                   </div>
                </nav>
@@ -652,10 +667,6 @@
                 <tr><th style="width: 150px;">Name</th><td>Mr. Rajesh Kumar</td></tr>
                 <tr><th>Contact Number</th><td>+91 9123456789</td></tr>
                 <tr><th>Whatsapp Number</th><td>+91 9876543210</td></tr>
-                <tr>
-                  <th>Rating</th>
-                  <td><span class="badge bg-success">4.5 <i class="fa fa-star"></i></span></td>
-                </tr>
               </tbody>
             </table>
 
@@ -676,13 +687,13 @@
                     <td>1</td>
                     <td>15-03-2025</td>
                     <td>Water leakage not fully resolved in kitchen pipe joint.</td>
-                    <td><span class="badge bg-warning text-dark">Re-Open</span></td>
+                    <td><span class="badge bg-warning text-dark">Re-Complain</span></td>
                   </tr>
                   <tr>
                     <td>2</td>
                     <td>22-03-2025</td>
                     <td>Leakage appeared again near the sink drain.</td>
-                    <td><span class="badge bg-info text-white">Under Review</span></td>
+                    <td><span class="badge bg-info text-white">Re-Complain</span></td>
                   </tr>
                 </tbody>
               </table>
@@ -698,6 +709,7 @@
     </div>
   </div>
 </div>
+
     <!-- latest jquery-->
     <script src="assets/js/jquery.min.js"></script>
     <!-- Bootstrap js-->
