--- a/Plumber-add.html
+++ b/Plumber-add.html
@@ -113,83 +113,100 @@
       <!-- Page Body Start-->
       <div class="page-body-wrapper">
         <!-- Page Sidebar Start-->
-        <div class="sidebar-wrapper" data-layout="stroke-svg">
-          <div class="logo-wrapper"><a href="index.html"><img class="img-fluid w-75" src="assets/images/logo/logo-unique_it.webp" alt=""></a>
-            <div class="back-btn"><i class="fa fa-angle-left"> </i></div>
-            <div class="toggle-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="grid"> </i></div>
-          </div>
-          <div class="logo-icon-wrapper"><a href="index.html"></a></div>
-          <nav class="sidebar-main">
-            <div class="left-arrow" id="left-arrow"><i data-feather="arrow-left"></i></div>
-            <div id="sidebar-menu">
-              <ul class="sidebar-links" id="simple-bar">
-                <li class="back-btn"><a href="index.html"><img class="img-fluid" src="assets/images/logo/logo-icon.png" alt=""></a>
-                  <div class="mobile-back text-end"> <span>Back </span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
-                </li>
-                <li class="pin-title sidebar-main-title">
-                  <div> 
-                    <h6>Pinned</h6>
-                  </div>
-                </li>
-                <li class="sidebar-main-title">
-                  <div>
-                    <h6 class="lan-1">General</h6>
-                  </div>
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="index.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Dasboard</span></a>
-                </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="Problem-list.html">
-                     <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Problem List</span></a>
+         <div class="sidebar-wrapper" data-layout="stroke-svg">
+               <div class="logo-wrapper">
+                  <a href="index.html"><img class="img-fluid w-75" src="assets/images/logo/logo-unique_it.webp" alt=""></a>
+                  <div class="back-btn"><i class="fa fa-angle-left"> </i></div>
+                  <div class="toggle-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="grid"> </i></div>
+               </div>
+               <div class="logo-icon-wrapper"><a href="index.html"></a></div>
+               <nav class="sidebar-main">
+                  <div class="left-arrow" id="left-arrow"><i data-feather="arrow-left"></i></div>
+                  <div id="sidebar-menu">
+                     <ul class="sidebar-links" id="simple-bar">
+                     <li class="back-btn">
+                        <a href="index.html"><img class="img-fluid" src="assets/images/logo/logo-icon.png" alt=""></a>
+                        <div class="mobile-back text-end"> <span>Back </span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
+                     </li>
+                     <li class="pin-title sidebar-main-title">
+                        <div>
+                           <h6>Pinned</h6>
+                        </div>
+                     </li>
+                     <li class="sidebar-main-title">
+                        <div>
+                           <h6 class="lan-1">General</h6>
+                        </div>
+                     </li>
+                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                        <a class="sidebar-link" href="index.html">
+                        <i class="fa fa-home text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Dasboard</span></a>
+                     </li>
+                     <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+                     <a class="sidebar-link" href="AddService.html">
+                     <i class="fa fa-plus-circle text-white" aria-hidden="true"></i>
+                     <span class="lan-2">Complain Add</span></a>
                   </li>
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="ComplainRequest-list.html">
-                     <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Complain Request List</span></a>
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
+                     <a class="sidebar-link" href="Working-Service.html">
+                        <i class="fa fa-cogs text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Working Complaints</span>
+                     </a>
                   </li>
-                  <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
+
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
+                     <a class="sidebar-link" href="Completed-Service.html">
+                        <i class="fa fa-check-circle text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Completed Complaints</span>
+                     </a>
+                  </li>
+
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
+                     <a class="sidebar-link" href="Plumberlist.html">
+                        <i class="fa fa-user text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Plumber List</span>
+                     </a>
+                  </li>
+
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
+                     <a class="sidebar-link" href="Plumberreport.html">
+                        <i class="fa fa-file-text text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Plumber Report</span>
+                     </a>
+                  </li>
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
                      <a class="sidebar-link" href="ComplainReport-list.html">
-                     <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Complain Report</span></a>
+                        <i class="fa fa-file-text text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Complaint Report</span>
+                     </a>
                   </li>
-                  <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                     <a class="sidebar-link" href="ComplainStatus.html">
-                     <i class="fa fa-home text-white" aria-hidden="true"></i>
-                     <span class="lan-2">Complain Status</span></a>
+
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
+                     <a class="sidebar-link" href="Problem-list.html">
+                        <i class="fa fa-exclamation-triangle text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Problem List</span>
+                     </a>
                   </li>
-               <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="Working-Service.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Working Complain </span></a>
-                </li> 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="Completed-Service.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Completed Complain </span></a>
-                </li> 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="Plumberlist.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Plumber</span></a>
-                </li> 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="Plumberreport.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Plumber Report</span></a>
-                </li> 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="Payment.html">
-                  <i class="fa fa-home text-white" aria-hidden="true"></i>
-                  <span class="lan-2">Payment</span></a>
-                </li> 
-              <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
+
+                  <li class="sidebar-list">
+                     <i class="fa fa-thumb-tack"></i>
+                     <a class="sidebar-link" href="Payment.html">
+                        <i class="fa fa-credit-card text-white" aria-hidden="true"></i>
+                        <span class="lan-2">Payment</span>
+                     </a>
+                  </li>
+
+                     <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
+                  </div>
+               </nav>
             </div>
-          </nav>
-        </div>
         <!-- Page Sidebar Ends-->
         <div class="page-body">
         
